MaryiaF/fix: historical data - date picker field and Currency field is not aligned in line, which is not as per design

--- a/app/chart-history.scss
+++ b/app/chart-history.scss
@@ -2,7 +2,7 @@
     border-radius: $border-radius;
     z-index: 8;
     position: relative;
-    top: 0px;
+    top: 0.4em;
     display: none;
     padding: 0.8rem;
     @include themify($themes) {
